# serializer version: 1
# name: TestTransactionsGeodataRequest.test_conversion_geodata_request
  dict({
    'message': 'Missing geodata requested',
    'success': True,
  })
# ---
# name: TestTransactionsGeodataRequest.test_conversion_multiple_inputs_geodata_request
  dict({
    'message': 'Missing geodata requested',
    'success': True,
  })
# ---
# name: TestTransactionsGeodataRequest.test_conversion_with_downstream_geodata_request
  dict({
    'message': 'Missing geodata requested',
    'success': True,
  })
# ---
# name: TestTransactionsGeodataRequest.test_creates_notifications_for_missing_geodata
  dict({
    'message': 'Missing geodata requested',
    'success': True,
  })
# ---
# name: TestTransactionsGeodataRequest.test_forbidden
  dict({
    'code': 'drf.permission_denied',
    'message': 'At least one verified gadget is required',
    'success': False,
  })
# ---
# name: TestTransactionsGeodataRequest.test_multilevel_conversion_geodata_request
  dict({
    'message': 'Missing geodata requested',
    'success': True,
  })
# ---
# name: TestTransactionsGeodataRequest.test_no_notifications_when_no_missing_geodata
  dict({
    'message': 'Missing geodata requested',
    'success': True,
  })
# ---
# name: TestTransactionsGeodataRequest.test_skips_notifications_when_buyer_absent
  dict({
    'message': 'Missing geodata requested',
    'success': True,
  })
# ---
# name: TestTransactionsGeodataRequest.test_success
  dict({
    'message': 'Missing geodata requested',
    'success': True,
  })
# ---
# name: TestTransactionsGeodataRequest.test_transaction_does_not_exist
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'transaction': list([
        '00000000-0000-0000-0000-000000000000',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestTransactionsGeodataRequest.test_transaction_not_user
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'transaction': list([
        '00000000-0000-0000-0000-000000000000',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestTransactionsGeodataRequest.test_unauthorized
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
# name: TestTransactionsGeodataRequest.test_user_deleted
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
